Fix desktop navigation wrapping and speakers bio hover pop-up

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -26,7 +26,11 @@ nav {
 
 	@media #{$mid-point} {
 		padding: 0 20px;
-		display: inline;
+		display: inline-block;
+		float: right;
+		width: auto;
+		top: 0;
+		text-align: right;
 	}
 
 
